# zypher-zoo-clash

./: .gitignore  Cargo.toml  README.md  game.sh
.cargo/: config.toml
bevy-toast/: Cargo.toml
bevy-toast/src/: lib.rs  systems.rs  toast.rs
bevy-web3/: Cargo.toml
bevy-web3/src/: contract.rs  eip_1193.rs  error.rs  lib.rs  plugin.rs
contracts/: .gitignore  hardhat.config.ts  jest.config.json  package.json  tsconfig.json
contracts/contracts/: Game.sol  GameCard.sol  GameVRF.sol  RaceGame.2.bak  RaceGame.bak  RaceGame.sol  RaceGameCard.sol  RaceGameCardA.sol  RaceZypher.sol  State.sol  TestZypher.sol
contracts/contracts/verifier/: Groth16Verifier.sol.b2
contracts/scripts/: deploy.ts
contracts/tests/: Game.spec.ts
game/: Cargo.toml
game/src/: error.rs  lib.rs  main.rs  style.rs
game/src/game/: api.rs  assets.rs  mod.rs  popup.rs  state.rs  ui.rs
game/src/game/res/: game.json  game_card.json
game/src/web3/: compute.rs  contract.rs  init.rs  mod.rs  state.rs  txn.rs  zshuffle.rs
rust-web3/: .gitignore  Cargo.toml
rust-web3/src/contract/: mod.rs  tokens.rs
shuffle/: .gitignore  Cargo.toml
shuffle/src/: error.rs  lib.rs  tests.rs  utils.rs  wasm.rs
webbuild/: index.html
