[package]
name = "game"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
#alloy ={workspace=true,features=["providers"]}
async-channel = {workspace=true}
async-std = "1.12.0"
bevy ={workspace=true}
bevy-web3 = {path="../bevy-web3"}
zshuffle={path="../shuffle"}
bevy_async_task = "0.2.0"
bevy_egui ={workspace=true}
bevy_interact_2d = {workspace=true}
bevy_prototype_lyon ={workspace=true}
bevy_tweening ={workspace=true}
hex.workspace = true
thiserror.workspace = true
serde.workspace = true
reqwest.workspace=true

downcast-rs = "1.2.1"
z4-types = "0.1"
bevy_pkv = "0.11.1"
bevy_cronjob = "=0.1.1"
bevy_ecs = "0.14.1"
bevy_simple_text_input = "0.9.2"
bevy_text_edit={git="https://gitlab.com/kimtinh/bevy-text-edit",branch="master"}
num-traits = "0.2.19"
hex-literal = "0.4.1"

[dependencies.web-sys]
version = "0.3"
features = [
  "Window",
  "Storage",
]


[target.'cfg(target_arch = "wasm32")'.dependencies]
#z4-bevy = { version = "0.1", git="https://github.com/zypher-game/z4-bevy", branch="main", default-features = false, features = ["wasm"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
#z4-bevy = { version = "0.1", git="https://github.com/zypher-game/z4-bevy", branch="main", default-features = false, features = ["ws"] }